# Catamaran

./: CMakeLists.txt  FreeRTOSConfig.h  README.md
inc/: MPU9250.h  NRF24.h  NRF24L01_LIBRARY.h  SERVO.h  mpu9250_library.h  trama_types.h
src/: MPU9250.cpp  NRF24.cpp  SERVO.cpp  main.cpp  mook.cpp
